# kyro_downloader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TASKS.md  install.sh  kyro.spec  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements-web.txt  requirements.txt
.github/: copilot-instructions.md  copilot-security.md
.github/workflows/: ci.yml  release.yml
browser-extension/chrome/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
browser-extension/firefox/: background.js  content.js  manifest.json  popup.html  popup.js
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api.md  cli_reference.md  config.md  deployment.md  development.md  gui_reference.md  installation.md  plugins.md  troubleshooting.md  tui_reference.md  usage.md  web_api.md
installer/: README.md
installer/debian/: build-deb.sh
installer/macos/: build-dmg.sh
installer/rpm/: build-rpm.sh  kyro-downloader.spec
installer/windows/: kyro_downloader.iss
linux/: kyro-downloader.desktop  kyro-downloader.service
scripts/: bump_version.py  generate_icons.py
src/: __init__.py  __main__.py  main.py
src/cli/: __init__.py  __main__.py
src/config/: defaults.py  manager.py  schema.py
src/core/: concurrent.py  download_manager.py  downloader.py  progress.py  queue.py  retry.py
src/gui/: __init__.py  app.py  gui_main.py
src/plugins/: __init__.py  api.py  loader.py
src/services/: archive.py  categories.py  channels.py  chapters.py  cloud_upload.py  compressor.py  converter.py  cookies_from_browser.py  date_filter.py  external_dl.py  filesize_filter.py  format_sorter.py  geo_restriction.py  impersonation.py  info_json.py  link_grabber.py  livestream.py  match_filter.py  media_server.py  metadata.py  netrc_auth.py  output_template.py  presets.py  proxy_manager.py  reports.py  scheduler.py  search.py  smart_mode.py  sponsorblock.py  statistics.py  subscriptions.py  subtitle_translate.py  subtitles.py  thumbnails.py  trimming.py  watch_later.py
src/ui/: banner.py  themes.py  tui.py
src/utils/: app_updater.py  circuit_breaker.py  dedup.py  ffmpeg.py  logger.py  notifications.py  platform.py  url_expander.py  (+2 more)
tests/: conftest.py  test_app_updater.py  test_archive.py  test_channels.py  test_chapters.py  test_circuit_breaker.py  test_cli_main.py  test_cli_search.py  test_cloud_upload.py  test_compressor.py  test_concurrency.py  test_concurrent.py  test_config.py  test_converter.py  test_date_filter.py  test_dedup.py  test_download_manager.py  test_downloader.py  test_drag_drop.py  test_external_dl.py  test_filesize_filter.py  test_format_analysis.py  test_format_sorter.py  test_geo_restriction.py  test_gui_components.py  test_gui_legacy_pages.py  test_gui_main.py  test_gui_state_components.py  test_impersonation.py  test_info_json.py  test_integration.py  test_integration_e2e.py  test_livestream.py  test_logger.py  test_main.py  test_match_filter.py  test_media_server.py  test_netrc_auth.py  test_new_services.py  test_notifications.py  (+24 more)
(+59 files in other folders)
