[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyro-downloader"
version = "1.0.1"
description = "Production-grade media downloader by nkpendyam"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "nkpendyam"}]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "rich",
    "pyfiglet",
    "pyperclip",
    "requests",
    "pillow",
    "loguru",
    "pyyaml",
    "pydantic",
    "plyer",
    "packaging",
    "mutagen",
    "python-dotenv",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2.0", "darkdetect>=0.8.0"]
tui = ["textual"]
web = ["fastapi", "uvicorn", "jinja2", "python-multipart"]
cloud = ["boto3", "google-api-python-client", "google-auth-oauthlib"]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-mock", "ruff", "mypy", "httpx", "textual"]

[project.scripts]
kyro = "src.cli.__main__:main"
kyro-tui = "src.ui.tui:main"
kyro-web = "src.ui.web.server:main"
kyro-gui = "src.gui.gui_main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow-running integration scenarios",
    "stress: marks tests as stress/load validation scenarios",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E701",  # Multiple statements on one line (colon) - intentional compact style
    "E501",  # Line too long - config lines exceed limit
    "E402",  # Module level import not at top of file - intentional for GUI try/except
]
